overflow fix

--- a/frontend/src/app/components/workspace/key-details/tab-comments/tab-comments.component.sass
+++ b/frontend/src/app/components/workspace/key-details/tab-comments/tab-comments.component.sass
@@ -15,6 +15,10 @@ form
 .text
     font-size: 80%
     margin-bottom: 7px
+    overflow: hidden
+    white-space: nowrap
+    text-overflow: ellipsis
+
 
 .date
     float: right
@@ -35,3 +39,5 @@ form
     font-size: 75%
     vertical-align: middle
 
+textarea.ng-invalid 
+    border-color: red
